--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -361,9 +361,8 @@
 
           <!-- ==============begin site-nav ============== -->
           <div class="grid__item large--one-quarter medium--one-third">
+          <h3>{{ linklists.customer-service.title }}</h3>
           <ul class="footer-menu" id="customer-service">
-            <h3>{{ linklists.customer-service.title }}</h3>
-
             {% for link in linklists.customer-service.links %}
                 <li>
                   <a href="{{ link.url }}" class="site-nav__link">{{ link.title }}</a>
@@ -375,9 +374,8 @@
 
           <!-- ==============begin site-nav ============== -->
           <div class="grid__item large--one-quarter medium--one-third">
+          <h3>{{ linklists.corporate-site.title }}</h3>
           <ul class="footer-menu" id="corporate-site">
-            <h3>{{ linklists.corporate-site.title }}</h3>
-
             {% for link in linklists.corporate-site.links %}
                 <li>
                   <a href="{{ link.url }}" class="site-nav__link">{{ link.title }}</a>
@@ -402,8 +400,10 @@
                  - http://docs.shopify.com/support/configuration/store-customization/where-do-i-get-my-mailchimp-form-action
               {% endcomment %}
               <h3>{{ 'layout.footer.newsletter_title' | t }}</h3>
+
               {% if settings.newsletter_form_action != blank %}
                 <form action="{{ settings.newsletter_form_action }}" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" class="input-group">
+                  <p>Keep up to date with our latest deals!</p>
                   <input type="email" value="{% if customer %}{{ customer.email }}{% endif %}" placeholder="{{ 'general.newsletter_form.newsletter_email' | t }}" name="EMAIL" id="mail" class="input-group-field" aria-label="{{ 'general.newsletter_form.newsletter_email' | t }}" autocorrect="off" autocapitalize="off">
                   <span class="input-group-btn">
                     <input type="submit" class="btn" name="subscribe" id="subscribe" value="{{ 'general.newsletter_form.submit' | t }}">
@@ -415,7 +415,9 @@
                   {% if form.posted_successfully? %}
                     <p class="note form-success">{{ 'general.newsletter_form.confirmation' | t }}</p>
                   {% else %}
+                    <p>Keep up to date with our latest deals!</p>
                     <div class="input-group">
+                      <label for="nl_email">Email</label>
                       <input type="email" value="{% if customer %}{{ customer.email }}{% endif %}" placeholder="{{ 'general.newsletter_form.newsletter_email' | t }}" name="contact[email]" id="Email" class="input-group-field" aria-label="{{ 'general.newsletter_form.newsletter_email' | t }}" autocorrect="off" autocapitalize="off">
                       <input type="hidden" name="contact[tags]" value="newsletter">
                       <span class="input-group-btn">
@@ -434,7 +436,8 @@
           {% if settings.footer_social_enable %}
             <div class="grid__item large--one-quarter medium--one-third">
               <h3>{{ 'layout.footer.social_title' | t }}</h3>
-                <ul class="inline-list social-icons">
+
+                <!-- <ul class="inline-list social-icons">
                   {% if settings.social_twitter_link != blank %}
                     <li>
                       <a class="icon-fallback-text" href="{{ settings.social_twitter_link }}" title="{{ shop.name }} on Twitter">
@@ -451,20 +454,27 @@
                       </a>
                     </li>
                   {% endif %}
-                </ul>
+                </ul> -->
+              <div class="footerbox">
+                <a href="https://www.facebook.com/herselfandco" class="icon icon-social icon-social-theme icon-facebook" title="Facebook">Facebook</a>
+                <a href="http://www.instagram.com/herselfandco" class="icon icon-social icon-social-theme icon-instagram" title="Instagram">Instagram</a>
+              </div>
             </div>
           {% endif %}
           <!-- ==============Social Icon End ============== -->
 
 
           <div class="grid__item text-center">
-            <hr>
+           <!--  <hr>
             {% comment %}
               Loop through available payment methods and show their icons.
             {% endcomment %}
             {% unless shop.enabled_payment_types == empty %}
-              {% assign payment_icons_available = 'amazon_payments,american_express,bitcoin,cirrus,dankort,diners_club,discover,dogecoin,dwolla,forbrugsforeningen,interac,jcb,litecoin,maestro,master,paypal,visa' | split: ',' %}
-              <h4 class="text-center">{{ 'layout.footer.accepted_payments' | t }}</h4>
+              {% assign payment_icons_available = 'amazon_payments,american_express,bitcoin,cirrus,dankort,diners_club,discover,dogecoin,dwolla,forbrugsforeningen,interac,jcb,litecoin,maestro,master,paypal,visa' | split: ',' %} -->
+
+              <p class="credit">Copyright 2016 <strong>Herself &amp; Co</strong>. Australian Importers &amp; Manufacturers of Leading Tanning Products &amp; Equipment. All Rights Reserved. | <img src="http://cdn3.bigcommerce.com/s-937qt/templates/__custom/images/Australia-Flag-icon.png?t=1465543908" alt=""> Telephone 1300 819 331</p>
+
+              <!-- <h4 class="text-center">{{ 'layout.footer.accepted_payments' | t }}</h4>
               <ul class="inline-list payment-icons">
                 {% for type in shop.enabled_payment_types %}
                   {% if payment_icons_available contains type %}
@@ -479,7 +489,7 @@
               </ul>
             {% endunless %}
             <a href="http://shopify.com/timber">Timber Theme Framework</a> by <a href="http://www.shopify.com?ref=Timber" title="Shopify.com">Shopify</a><br>
-            <small>{{ powered_by_link }}</small>
+            <small>{{ powered_by_link }}</small> -->
           </div>
         </div>
       </div>
