--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -47,6 +47,34 @@
     {{ 'shopify_common.js' | shopify_asset_url | script_tag }}
   {% endif %}
 
+  {{ 'responsiveslides.css'         | asset_url | stylesheet_tag }}
+  {{ 'responsiveslides.min.js'     | asset_url | script_tag }}
+
+
+
+  <script>
+      $(function() {
+        $(".rslides").responsiveSlides({
+          auto: true,             // Boolean: Animate automatically, true or false
+          speed: 500,            // Integer: Speed of the transition, in milliseconds
+          timeout: 4000,          // Integer: Time between slide transitions, in milliseconds
+          pager: false,           // Boolean: Show pager, true or false
+          nav: true,             // Boolean: Show navigation, true or false
+          random: false,          // Boolean: Randomize the order of the slides, true or false
+          pause: false,           // Boolean: Pause on hover, true or false
+          pauseControls: true,    // Boolean: Pause when hovering controls, true or false
+          prevText: "Previous",   // String: Text for the "previous" button
+          nextText: "Next",       // String: Text for the "next" button
+          maxwidth: "",           // Integer: Max-width of the slideshow, in pixels
+          navContainer: "",       // Selector: Where controls should be appended to, default is after the 'ul'
+          manualControls: "",     // Selector: Declare custom pager navigation
+          namespace: "rslides",   // String: Change the default namespace used
+          before: function(){},   // Function: Before callback
+          after: function(){}     // Function: After callback
+        });
+      });
+  </script>
+
 </head>
 
 {% comment %}
@@ -303,7 +331,7 @@
                 <li class="site-nav--has-dropdown{% if link.active %} site-nav--active{% endif %}" aria-haspopup="true">
                   <a href="{{ link.url }}" class="site-nav__link">
                     {{ link.title }}
-                    <span class="icon icon-arrow-down" aria-hidden="true"></span>
+                    <!-- <span class="icon icon-arrow-down" aria-hidden="true"></span> -->
                   </a>
                   <ul class="site-nav__dropdown">
                     {% for childlink in linklists[child_list_handle].links %}
@@ -348,8 +376,169 @@
     </nav>
 
     <main class="wrapper main-content" role="main">
+    <div class="twelve columns">
+      <section class="rslides_container">
+        <ul class="rslides">
+          <li><img src="{{ 'slide_01.png' | asset_url }}" alt="{{ shop.name }}"></li>
+          <li><img src="{{ 'slide_02.png' | asset_url }}" alt="{{ shop.name }}"></li>
+        </ul>
+      </section>
+    </div>
+    <div class="grid">
+      <nav class="grid__item small--text-center medium-up--one-fifth" role="navigation">
+        <hr class="hr--small medium-up--hide">
+        <button id="ToggleMobileMenu" class="mobile-menu-icon medium-up--hide .large--hide" aria-haspopup="true" aria-owns="SiteNav">
+          <span class="line"></span>
+          <span class="line"></span>
+          <span class="line"></span>
+          <span class="line"></span>
+          <span class="icon__fallback-text">{{ 'layout.navigation.menu' | t }}</span>
+        </button>
+        <div id="SiteNav" class="site-nav" role="menu">
+        <h2>SHOP NOW</h2>
+          <ul class="list--nav">
+            {% for link in menus.main-menu.links %}
+              {% assign child_list_handle = link.title | handleize %}
+              {% if menus[child_list_handle].links != blank %}
+                <li class="site-nav--has-submenu site-nav__element">
+                  <div class="hitarea expandable-hitarea"></div>
+                  <button class="site-nav__link btn--link site-nav__expand hidden" aria-expanded="false" aria-controls="Collapsible{{ forloop.index }}">
+                    {{ link.title }}
+                  </button>
+                  <button class="site-nav__link btn--link site-nav__collapse" aria-expanded="true" aria-controls="Collapsible{{ forloop.index }}">
+                    {{ link.title }}
+                  </button>
+                  <ul id="Collapsible{{ forloop.index }}" class="site-nav__submenu site-nav__submenu--expanded" aria-hidden="false">
+                    {% for childlink in menus[child_list_handle].links %}
+                      <li class="{% if childlink.active or collection.current_type == childlink.title or collection.current_vendor == childlink.title %}{% unless forloop.first and childlink.title contains 'All' and current_tags.size > 0 %} site-nav--active {% endunless %}{% endif %}">
+                        <a href="{{ childlink.url }}" class="site-nav__link">{{ childlink.title | escape }}</a>
+                      </li>
+                    {% endfor %}
+                  </ul>
+                </li>
+              {% else %}
+                <li class="site-nav__element {% if link.active %}site-nav--active{% endif %}">
+                
+                  <a href="{{ link.url }}" class="site-nav__link">{{ link.title }}</a>
+                </li>
+              {% endif %}
+            {% endfor %}
+            {% if shop.customer_accounts_enabled %}
+              {% if customer %}
+                <li>
+                  <a href="/account" class="site-nav__link site-nav--account medium-up--hide">{{ 'layout.customer.account' | t }}</a>
+                </li>
+                <li>
+                  <a href="/account/logout" class="site-nav__link site-nav--account medium-up--hide">{{ 'layout.customer.log_out' | t }}</a>
+                </li>
+              {% else %}
+                <li>
+                  <a href="/account/login" class="site-nav__link site-nav--account medium-up--hide">{{ 'layout.customer.log_in' | t }}</a>
+                </li>
+                <li>
+                  <a href="/account/register" class="site-nav__link site-nav--account medium-up--hide">{{ 'layout.customer.create_account' | t }}</a>
+                </li>
+              {% endif %}
+            {% endif %}
+          </ul>
+<!--           <ul class="list--inline social-links">
+            {% if settings.social_facebook_link != blank %}
+              <li>
+                <a href="{{ settings.social_facebook_link }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Facebook' }}">
+                  {% include 'icon-facebook' %}
+                  <span class="icon__fallback-text">Facebook</span>
+                </a>
+              </li>
+            {% endif %}
+            {% if settings.social_twitter_link != blank %}
+              <li>
+                <a href="{{ settings.social_twitter_link }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Twitter' }}">
+                  {% include 'icon-twitter' %}
+                  <span class="icon__fallback-text">Twitter</span>
+                </a>
+              </li>
+            {% endif %}
+            {% if settings.social_pinterest_link != blank %}
+              <li>
+                <a href="{{ settings.social_pinterest_link }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Pinterest' }}">
+                  {% include 'icon-pinterest' %}
+                  <span class="icon__fallback-text">Pinterest</span>
+                </a>
+              </li>
+            {% endif %}
+            {% if settings.social_instagram_link != blank %}
+              <li>
+                <a href="{{ settings.social_instagram_link }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Instagram' }}">
+                  {% include 'icon-instagram' %}
+                  <span class="icon__fallback-text">Instagram</span>
+                </a>
+              </li>
+            {% endif %}
+            {% if settings.social_google_plus_link != blank %}
+              <li>
+                <a href="{{ settings.social_google_plus_link }}" rel="publisher" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Google Plus' }}">
+                  {% include 'icon-google-plus' %}
+                  <span class="icon__fallback-text">Google Plus</span>
+                </a>
+              </li>
+            {% endif %}
+            {% if settings.social_tumblr_link != blank %}
+              <li>
+                <a href="{{ settings.social_tumblr_link }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Tumblr' }}">
+                  {% include 'icon-tumblr' %}
+                  <span class="icon__fallback-text">Tumblr</span>
+                </a>
+              </li>
+            {% endif %}
+            {% if settings.social_youtube_link != blank %}
+              <li>
+                <a href="{{ settings.social_youtube_link }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'YouTube' }}">
+                  {% include 'icon-youtube' %}
+                  <span class="icon__fallback-text">YouTube</span>
+                </a>
+              </li>
+            {% endif %}
+            {% if settings.social_vimeo_link != blank %}
+              <li>
+                <a href="{{ settings.social_vimeo_link }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Vimeo' }}">
+                  {% include 'icon-vimeo' %}
+                  <span class="icon__fallback-text">Vimeo</span>
+                </a>
+              </li>
+            {% endif %}
+            {% if settings.social_fancy_link != blank %}
+              <li>
+                <a href="{{ settings.social_fancy_link }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Fancy' }}">
+                  {% include 'icon-fancy' %}
+                  <span class="icon__fallback-text">Fancy</span>
+                </a>
+              </li>
+            {% endif %}
+            {% if settings.show_atom and settings.main_blog != blank %}
+              <li>
+                <a href="/blogs/{{ settings.main_blog }}.atom">
+                  {% include 'icon-rss' %}
+                  <span class="icon__fallback-text">Blog</span>
+                </a>
+              </li>
+            {% endif %}
+          </ul> -->
+        </div>
+        
+<!--         <hr class="medium-up--hide hr--small {% if template == 'index' %}{% if settings.home_section_1 == 'banner-image' or settings.home_section_1 == 'featured-products'  %}hr--border-bottom{% endif %}{% endif %}"> -->
+      </nav>
 
-      {{ content_for_layout }}
+      <main class="main-content grid__item medium-up--four-fifths" id="MainContent" role="main">
+        {% unless template == 'index' and settings.home_section_1 == 'banner-image' %}
+          <!-- <hr class="hr--border-top small--hide"> -->
+        {% endunless %}
+        {% if settings.show_breadcrumb_nav and template != 'index' %}
+          {% include 'breadcrumb-nav' %}
+        {% endif %}
+        {{ content_for_layout }}
+      </main>
+
+    </div>
 
     </main>
 
@@ -538,6 +727,8 @@
       });
     </script>
   {% endif %}
+
+  {{ 'theme.js' | asset_url | script_tag }}
 
 </body>
 </html>
