--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -7,19 +7,79 @@
     - http://docs.shopify.com/themes/liquid-variables/global
 {% endcomment %}
 
-<h2>{{ 'homepage.sections.frontpage_title' | t }}</h2>
+<!-- <div class="twelve columns">
+  <section class="rslides_container">
+    <ul class="rslides">
+      <li><img src="{{ 'slide_01.png' | asset_url }}" alt="{{ shop.name }}"></li>
+      <li><img src="{{ 'slide_02.png' | asset_url }}" alt="{{ shop.name }}"></li>
+    </ul>
+  </section>
+</div> -->
+
+<!-- {{ 'homepage.sections.frontpage_title' | t }} -->
+<h2>TOP PICKS</h2>
 
 {% comment %}
   Use class grid-uniform to have evenly sized columns clear
   each other properly at each breakpoint.
 {% endcomment %}
-<div class="grid-uniform">
 
-  {% comment %}
+  {% comment %} 
     Loop through products in your Frontpage collection.
     This collection is created by default, but you must add products to it.
   {% endcomment %}
-  {% for product in collections.frontpage.products limit:4 %}
+
+  {% comment %} 
+     for product in collections.frontpage.products limit:4 
+  {% endcomment %}
+
+  {% for product in collections.frontpage.products %}
+
+    {% comment %}
+      Change the grid item width by using classes from the grid in
+      the grid_item_width variable.
+
+      Example:
+        - {% assign grid_item_width = 'large--one-third medium--one-half' %}
+    {% endcomment %}
+    {% assign grid_item_width = 'large--one-quarter medium--one-half' %}
+    {% include 'product-grid-item' %}
+
+  {% else %}
+    {% comment %}
+      For onboarding new users to your theme, we add some default products and onboarding tutorials to help populate their store
+    {% endcomment %}
+    {% unless emptyState %}
+      {{ 'theme-onboarding.css' | global_asset_url | stylesheet_tag }}
+      {% assign emptyState = true %}
+    {% endunless %}
+
+    {% include 'onboarding-featured-products' %}
+
+  {% endfor %}
+
+
+<hr>
+
+<!-- <h2>{{ 'homepage.sections.featured_title' | t }}</h2> -->
+<h2>LATEST DEALS</h2>
+
+
+{% comment %}
+  Use class grid-uniform to have evenly sized columns clear
+  each other properly at each breakpoint.
+{% endcomment %}
+
+  {% comment %} 
+    Loop through products in your Frontpage collection.
+    This collection is created by default, but you must add products to it.
+  {% endcomment %}
+
+  {% comment %} 
+     for product in collections.frontpage.products limit:4 
+  {% endcomment %}
+
+  {% for product in collections.frontpage.products %}
 
     {% comment %}
       Change the grid item width by using classes from the grid in
@@ -46,10 +106,7 @@
 
 </div>
 
-<hr>
-
-<h2>{{ 'homepage.sections.featured_title' | t }}</h2>
-
+{% comment %}
 <div class="grid-uniform">
 
   {% comment %}
@@ -112,13 +169,15 @@
 
 <hr>
 
-{% comment %}
+
   Loop through three recent blog articles with the following code.
 
   Since we're not on the blog template, we need to define the blog
   handle we want to focus on. For this example we'll use the default 'news',
   but you can create a blog page-specific content if you want.
-{% endcomment %}
+
+ endcomment 
+ 
 <h2>{{ 'homepage.sections.news_title' | t }}</h2>
 
 <div class="grid">
@@ -161,3 +220,4 @@
 
   {% endfor %}
 </div>
+{% endcomment %}
