--- a/assets/timber.scss.liquid
+++ b/assets/timber.scss.liquid
@@ -2552,7 +2552,7 @@ body {
     font-family: Oswald, sans-serif;
     font-weight: 300;
     line-height: 1.5;
-    //letter-spacing: .1em;
+    letter-spacing: .1em;
 }
 
 .nav-bar {
@@ -2570,6 +2570,7 @@ body {
   border-bottom: 2px solid #f3bacf;
   font-family: Oswald, sans-serif;
   margin: 0;
+  font-weight: normal;
 
   li {
     height: auto;
@@ -2714,6 +2715,7 @@ footer.site-footer {
         font-weight: 300;
         line-height: 1.5;
         letter-spacing: .1em;
+        font-weight: normal;
       }
 
       ul {
@@ -2810,11 +2812,13 @@ footer.site-footer {
       
     }
     .credit {
-        img {
-          vertical-align: middle;
-          margin: 0 5px;
-        }
+      font-size: 13px;
+      
+      img {
+        vertical-align: middle;
+        margin: 0 5px;
       }
+    }
   }
 }
 
@@ -2916,6 +2920,7 @@ footer.site-footer {
     margin: 0 0 0px;
     font-family: Oswald, sans-serif;
     margin-left: 20px;
+    font-weight: normal;
   }
 
   .list--nav {
