--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -31,7 +31,8 @@
   {{ 'timber.scss.css' | asset_url | stylesheet_tag }}
 
   <!-- Google Font ================================================== -->
-  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet"> -->
+  <link href='//fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
 
   <!-- Header hook for plugins ================================================== -->
   {{ content_for_header }}
