add BackToTop, edit some page

--- a/assets/timber.scss.liquid
+++ b/assets/timber.scss.liquid
@@ -2553,15 +2553,80 @@ body {
     font-weight: 300;
     line-height: 1.5;
     letter-spacing: .1em;
+
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+
+    &#herseft-amp-co {
+      .rslides_container {
+        display: block;
+      }
+    }
+
+    &#aviva {
+      background-image: url(http://cdn4.bigcommerce.com/s-937qt/templates/__custom/images/avivalabs-bg.jpg);
+      /* background-position: center center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+      background-color: #464646; */
+    }
+
+    &#b-tan {
+      background-image: url(http://cdn4.bigcommerce.com/s-937qt/templates/__custom/images/btan-bg.jpg);
+    }
+
+    &#fitness-tan {
+      background-image: url(http://cdn4.bigcommerce.com/s-937qt/templates/__custom/images/fitnesstan-bg.png);
+    }
+
+    &#st-tropez {
+      background-color: #F4F4F4;
+    }
+
+    &#norvell {
+      background-image: url(http://cdn4.bigcommerce.com/s-937qt/templates/__custom/images/norvell-bg.jpg);
+    }
 }
 
 .nav-bar {
-  background-color: white;
+  background-color: transparent;
 }
 
 .wrapper {
   padding: 0;
   max-width: 1250px;
+  margin-top: 0px;
+
+  .breadcrumb {
+    margin-bottom: 40px;
+    color: #888;
+    border-bottom: 1px solid #E8E8E8;
+    line-height: 30px;
+    padding: 0 20px;
+    font-size: 11px;
+    text-transform: uppercase;
+
+    a {
+      color: #f3bacf;
+
+      &:hover {
+        color: #444;
+      }
+    }
+  }
+
+  .backtotop {
+    float: right;
+    text-align: right;
+    background: url(http://cdn3.bigcommerce.com/r-d4dbaed86c5df2ef333e2ea7ee9d3989b1545c67/themes/Sammot/images/backtotop.png) 0 0 no-repeat;
+    width: 34px;
+    height: 22px;
+    display: block;
+    margin: 0 5px;
+  }
 }
 
 #AccessibleNav {
@@ -2813,7 +2878,7 @@ footer.site-footer {
     }
     .credit {
       font-size: 13px;
-      
+
       img {
         vertical-align: middle;
         margin: 0 5px;
@@ -2832,7 +2897,8 @@ footer.site-footer {
   position: relative;
   float: left;
   width: 100%;
-  }
+  display: none;
+}
 
 .rslides {
   position: relative;
@@ -2841,7 +2907,7 @@ footer.site-footer {
   width: 100%;
   padding: 0;
   margin: 0;
-  }
+}
 
 .rslides li {
   -webkit-backface-visibility: hidden;
@@ -2850,13 +2916,13 @@ footer.site-footer {
   width: 100%;
   left: 0;
   top: 0;
-  }
+}
 
 .rslides li:first-child {
   position: relative;
   display: block;
   float: left;
-  }
+}
 
 .rslides img {
   display: block;
@@ -2864,9 +2930,9 @@ footer.site-footer {
   float: left;
   width: 100%;
   border: 0;
-  }
+}
 
-  .rslides_nav {
+.rslides_nav {
   z-index: 3;
   position: absolute;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
@@ -2880,17 +2946,17 @@ footer.site-footer {
   width: 38px;
   background: transparent url("themes.gif") no-repeat left top;
   margin-top: -45px;
-  }
+}
 
 .rslides_nav:active {
   opacity: 1.0;
-  }
+}
 
 .rslides_nav.next {
   left: auto;
   background-position: right top;
   right: 0;
-  }
+}
 
   /*----------  SLIDER End  ----------*/
 
@@ -2929,6 +2995,7 @@ footer.site-footer {
     .site-nav__element {
       position: relative;
       border-bottom: 1px solid #e5e5e5;
+      background-color: white;
 
       &:last-child {
         display: none;
@@ -2938,6 +3005,9 @@ footer.site-footer {
         border-bottom: 0px;
       }
 
+      .site-nav__link:hover {
+        background-color: #f3bacf;
+      }
       .hitarea.expandable-hitarea {
         background: url(http://cdn3.bigcommerce.com/r-d4dbaed86c5df2ef333e2ea7ee9d3989b1545c67/themes/Sammot/images/menu-arrow.png) no-repeat center -41px;
         cursor: pointer;
@@ -2993,6 +3063,12 @@ footer.site-footer {
           }
         }
       }
+
+      .site-nav--active>.site-nav__link {
+        font-weight: 300;
+        background-color: #f3bacf;
+        color: white;
+      }
     }
   }
 }
@@ -3014,66 +3090,85 @@ footer.site-footer {
     margin: 0 0 18px;
     font-family: Oswald, sans-serif;
     text-transform: uppercase;
+    font-weight: 400;
   }
 
-  .product-item {
-    border: 1px solid #e5e5e5;
-    border-bottom: 2px solid #ddd;
-    background: #f2f2f2;
-    padding-left: 0px;
-    margin-left: 18px;
-    margin-bottom: 20px;
-    width: 23%;
-    min-height: 395px;
-    margin-bottom: 20px;
+  .grid-uniform {
+    margin-left: -20px;
 
-    a {
-      background: white;
-      height: 248px;
-
-      img {
-        max-height: 248px;
-      }
-    }
-
-    h6 {
-      color: #4c4944;
-      padding: 0px 8px 0px;
-      text-align: center;
-      font-size: 14px;
-      margin-top: 12px;
-      height: 35px;
+    .product-item {
+      border: 1px solid #e5e5e5;
+      border-bottom: 2px solid #ddd;
+      background: #f2f2f2;
+      padding-left: 0px;
+      margin-left: 18px;
+      margin-bottom: 20px;
+      width: 23%;
+      min-height: 395px;
+      margin-bottom: 20px;
 
       a {
-        background: #f2f2f2 !important;
+        background: white;
+        height: 248px;
+
+        img {
+          max-height: 248px;
+        }
+      }
+
+      h6 {
+        color: #4c4944;
+        padding: 0px 8px 0px;
+        text-align: center;
+        font-size: 14px;
+        margin-top: 12px;
+        height: 35px;
+
+        a {
+          background: #f2f2f2 !important;
+        }
+      }
+
+      p {
+        font-size: 15px;
+        font-weight: bold;
+        color: #f3bacf;
+        text-align: center;
+      }
+
+      .ProductActionAdd {
+        padding: 12px 0px;
+        text-align: center;
+
+        .Add.To.Cart {
+          background: #000000 url(http://cdn3.bigcommerce.com/r-d4dbaed86c5df2ef333e2ea7ee9d3989b1545c67/themes/Sammot/images/white/cart.png) 8px 50% no-repeat !important;
+          border: solid #000000 1px;
+          color: #fff !important;
+          font-family: "oswald";
+          line-height: 26px;
+          display: inline-block;
+          zoom: 1;
+          height: 26px;
+          font-weight: 500;
+          text-transform: uppercase;
+          padding: 0 10px 0 30px;
+        }
       }
     }
 
-    p {
-      font-size: 15px;
-      font-weight: bold;
-      color: #f3bacf;
-      text-align: center;
-    }
-
-    .ProductActionAdd {
-      padding: 12px 0px;
-      text-align: center;
-
-      .Add.To.Cart {
-        background: #000000 url(http://cdn3.bigcommerce.com/r-d4dbaed86c5df2ef333e2ea7ee9d3989b1545c67/themes/Sammot/images/white/cart.png) 8px 50% no-repeat !important;
-        border: solid #000000 1px;
-        color: #fff !important;
-        font-family: "oswald";
-        line-height: 26px;
-        display: inline-block;
-        zoom: 1;
-        height: 26px;
-        font-weight: 500;
-        text-transform: uppercase;
-        padding: 0 10px 0 30px;
-      }
-    }
   }
+
 }
 /*----------  GRID PRODUCT End  ----------*/
+
+/*----------  COLLECTION Start  ----------*/
+.section-header {
+  .banner {
+    height: auto;
+  }
+
+  .section-header__right {
+    float: right;
+  }
+}
+/*----------  COLLECTION End  ----------*/
