--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -8,13 +8,15 @@
 
 {% paginate collection.products by 12 %}
 
+{% comment %}
 {% include 'breadcrumb' %}
+{% endcomment %}
 
 {% comment %}
   Use .grid--rev so that the collection tags appear below the products on mobile
 {% endcomment %}
 <div class="grid--rev">
-  <div class="grid__item large--three-quarters">
+  <div class="grid__item">
 
     {% comment %}
       Different markup if a collection description exists
@@ -34,7 +36,9 @@
       </div>
     {% else %}
       <header class="section-header">
-        <h1 class="section-header__title section-header__left">{{ collection.title }}</h1>
+        <p><img class="banner" title="aviva-banner.jpg" src={% if collection.image %}{{ collection.image | img_url: 'master' }}{% endif %} alt="aviva-banner.jpg" width="1200" height="283"></p>
+
+        <!-- <h1 class="section-header__title section-header__left">{{ collection.title }}</h1> -->
         <div class="section-header__right">
           {% include 'collection-sorting' %}
         </div>
@@ -92,9 +96,11 @@
 
   </div>
 
+  {% comment %}
   <div class="grid__item large--one-quarter">
     {% include 'collection-sidebar' %}
   </div>
+  {% endcomment %}
 </div>
 
 {% endpaginate %}
