--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -528,6 +528,30 @@
         </div>
         
 <!--         <hr class="medium-up--hide hr--small {% if template == 'index' %}{% if settings.home_section_1 == 'banner-image' or settings.home_section_1 == 'featured-products'  %}hr--border-bottom{% endif %}{% endif %}"> -->
+      
+      <div id="shop-by-price" class="site-nav" role="menu">
+        <h2>SHOP BY PRICE</h2>
+        <ul class="list--nav">
+
+          <li class="site-nav__element ">
+            <a href="#" class="site-nav__link">$0.00 - $104.00</a>
+          </li>
+          <li class="site-nav__element ">
+            <a href="#" class="site-nav__link">$104.00 - $202.00</a>
+          </li>
+          <li class="site-nav__element ">
+            <a href="#" class="site-nav__link">$202.00 - $299.00</a>
+          </li>
+          <li class="site-nav__element ">
+            <a href="#" class="site-nav__link">$299.00 - $397.00</a>
+          </li>
+          <li class="site-nav__element ">
+            <a href="#" class="site-nav__link">$397.00 - $495.00</a>
+          </li>    
+        </ul>
+      </div>
+
+
       </nav>
 
       <main class="main-content grid__item medium-up--four-fifths" id="MainContent" role="main">
@@ -540,15 +564,8 @@
         {{ content_for_layout }}
 
         <a href="javascript:void(0);" class="backtotop" alt="Scroll to Top" title="Scroll to Top">&nbsp;</a>
-
       </main>
-
-      
-
     </div>
-
-
-
     </main>
 
     <!-- begin site-footer -->
