--- a/snippets/product-grid-item.liquid
+++ b/snippets/product-grid-item.liquid
@@ -37,7 +37,7 @@
   {% assign sold_out = false %}
 {% endif %}
 
-<div class="grid__item product-item {{ grid_item_width }}">
+<div class="grid__item product-item {{ grid_item_width }}" id="{{product.id}}">
 
   {% comment %}
     Link to your product with the 'within: collection' filter for the link to be aware of the collection.
@@ -59,6 +59,11 @@
     <a href="{{ product.url | within: collection }}">{{ product.title }}</a>
   </p>
   <p>
+    {% if on_sale %}
+      <span class="visually-hidden">{{ 'products.general.regular_price' | t }}</span>
+      <s>{{ product.compare_at_price | money }}</s>
+    {% endif %}
+    
     {% comment %}
       You can show a leading 'from' or 'up to' by checking 'product.price_varies'
       if your variants have different prices.
@@ -68,7 +73,7 @@
         {% assign sale_price = product.price | money %}
         {{ 'products.product.on_sale_from_html' | t: price: sale_price }}
       {% else %}
-        <strong>{{ 'products.product.on_sale' | t }}</strong>
+        <!-- <strong>{{ 'products.product.on_sale' | t }}</strong> -->
         {{ product.price | money }}
       {% endif %}
     {% else %}
@@ -81,11 +86,8 @@
     {% endif %}
     {% if sold_out %}
       <br><strong>{{ 'products.product.sold_out' | t }}</strong>
-    {% endif %}
-    {% if on_sale %}
-      <span class="visually-hidden">{{ 'products.general.regular_price' | t }}</span>
-      <br><s>{{ product.compare_at_price | money }}</s>
-    {% endif %}
+    {% endif %} 
+
   </p>
   <div class="ProductActionAdd" style="display:;">
         <a href="http://www.herselfandco.com/cart.php?action=add&amp;product_id=2" class="Add To Cart">Add To Cart</a>
