--- a/assets/timber.js.liquid
+++ b/assets/timber.js.liquid
@@ -100,6 +100,14 @@ timber.init = function () {
   timber.responsiveVideos();
   timber.collectionViews();
   timber.loginForms();
+  //new
+  timber.backToTop();
+};
+
+timber.backToTop = function () {
+  jQuery(".backtotop").click(function () {
+    jQuery("html, body").animate({scrollTop: 0}, 1000);
+  });
 };
 
 timber.accessibleNav = function () {
